feature(employee): standardize endpoint responses in EmployeeManagementController.